--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     rewrite ^([^.]*[^/])$ $1/ permanent;
 
-    location /rebound {
+    location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         rewrite ^([^.]*[^/])$ $1/ permanent;
