--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,10 @@ server {
     rewrite ^([^.]*[^/])$ $1/ permanent;
 
     location / {
+        if ($request_uri ~ ^([^.\?]*[^/])$) {
+            return 301 $1/;
+        }
+        
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         rewrite ^([^.]*[^/])$ $1/ permanent;
